[project]
name = "ncde-rl"
version = "0.1.0"
description = "Experiments with reinforcement learning using neural controlled differential equations"
authors = [{ name = "Theodore Pinkerton", email = "p_t@fastmaiil.net" }]
readme = "README.md"
dependencies = [
  "jax",
  "equinox",
  "diffrax",
  "optax",
  "gymnax",
  "gymnasium",
  "jaxtyping",
  "torch",
  "chex",
]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "jax",
  "reinforcement learning",
  "neural differential equations",
  "node",
  "neural controlled differential equations",
  "ncde",
  "diffrax",
]

[tool.ruff.lint]
ignore = ["F722"] # jax typing workaround
